MCTF5.0/web/nova_crest/challenge/backend/src/tools/QMongo/generated/QMongoParser.ts
// Generated from src/tools/QMongo/grammar/QMongo.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { QMongoVisitor } from "./QMongoVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class QMongoParser extends antlr.Parser {
    public static readonly LET = 1;
    public static readonly FROM = 2;
    public static readonly WHERE = 3;
    public static readonly SELECT = 4;
    public static readonly INCLUDE = 5;
    public static readonly ORDER = 6;
    public static readonly BY = 7;
    public static readonly ASC = 8;
    public static readonly DESC = 9;
    public static readonly LIMIT = 10;
    public static readonly OFFSET = 11;
    public static readonly INSERT = 12;
    public static readonly INTO = 13;
    public static readonly UPDATE = 14;
    public static readonly SET = 15;
    public static readonly DELETE = 16;
    public static readonly AGGREGATE = 17;
    public static readonly MATCH = 18;
    public static readonly GROUP = 19;
    public static readonly HAVING = 20;
    public static readonly SORT = 21;
    public static readonly LOOKUP = 22;
    public static readonly ON = 23;
    public static readonly POLICY = 24;
    public static readonly MAX_LIMIT = 25;
    public static readonly ALLOW = 26;
    public static readonly DENY = 27;
    public static readonly FIELDS = 28;
    public static readonly FILTER = 29;
    public static readonly AND = 30;
    public static readonly OR = 31;
    public static readonly NOT = 32;
    public static readonly IN = 33;
    public static readonly BETWEEN = 34;
    public static readonly CONTAINS = 35;
    public static readonly STARTS_WITH = 36;
    public static readonly ENDS_WITH = 37;
    public static readonly NOW = 38;
    public static readonly COUNT = 39;
    public static readonly SUM = 40;
    public static readonly AVG = 41;
    public static readonly MIN_FUNC = 42;
    public static readonly MAX_FUNC = 43;
    public static readonly BOOLEAN = 44;
    public static readonly EQ = 45;
    public static readonly NEQ = 46;
    public static readonly GTE = 47;
    public static readonly LTE = 48;
    public static readonly GT = 49;
    public static readonly LT = 50;
    public static readonly ASSIGN = 51;
    public static readonly PLUS = 52;
    public static readonly MINUS_OP = 53;
    public static readonly STAR = 54;
    public static readonly SLASH = 55;
    public static readonly MODULO = 56;
    public static readonly LBRACE = 57;
    public static readonly RBRACE = 58;
    public static readonly LBRACKET = 59;
    public static readonly RBRACKET = 60;
    public static readonly LPAREN = 61;
    public static readonly RPAREN = 62;
    public static readonly COMMA = 63;
    public static readonly DOT = 64;
    public static readonly COLON = 65;
    public static readonly NUMBER = 66;
    public static readonly STRING = 67;
    public static readonly FIELD_REF = 68;
    public static readonly IDENTIFIER = 69;
    public static readonly WS = 70;
    public static readonly LINE_COMMENT = 71;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_letStatement = 2;
    public static readonly RULE_fromStatement = 3;
    public static readonly RULE_whereClause = 4;
    public static readonly RULE_selectClause = 5;
    public static readonly RULE_fieldList = 6;
    public static readonly RULE_includeClause = 7;
    public static readonly RULE_includeBody = 8;
    public static readonly RULE_orderByClause = 9;
    public static readonly RULE_orderField = 10;
    public static readonly RULE_limitClause = 11;
    public static readonly RULE_offsetClause = 12;
    public static readonly RULE_insertStatement = 13;
    public static readonly RULE_insertFieldList = 14;
    public static readonly RULE_insertField = 15;
    public static readonly RULE_updateStatement = 16;
    public static readonly RULE_setClause = 17;
    public static readonly RULE_setFieldList = 18;
    public static readonly RULE_setField = 19;
    public static readonly RULE_deleteStatement = 20;
    public static readonly RULE_aggregateStatement = 21;
    public static readonly RULE_aggregateBody = 22;
    public static readonly RULE_matchClause = 23;
    public static readonly RULE_lookupClause = 24;
    public static readonly RULE_dotPath = 25;
    public static readonly RULE_groupByClause = 26;
    public static readonly RULE_groupFieldList = 27;
    public static readonly RULE_groupField = 28;
    public static readonly RULE_aggregateFunction = 29;
    public static readonly RULE_havingClause = 30;
    public static readonly RULE_sortClause = 31;
    public static readonly RULE_sortField = 32;
    public static readonly RULE_policyStatement = 33;
    public static readonly RULE_policyBody = 34;
    public static readonly RULE_policyRule = 35;
    public static readonly RULE_expression = 36;
    public static readonly RULE_orExpression = 37;
    public static readonly RULE_andExpression = 38;
    public static readonly RULE_notExpression = 39;
    public static readonly RULE_primaryExpression = 40;
    public static readonly RULE_comparison = 41;
    public static readonly RULE_comparisonOp = 42;
    public static readonly RULE_valueExpr = 43;
    public static readonly RULE_exprFunc = 44;
    public static readonly RULE_literal = 45;
    public static readonly RULE_stringLiteral = 46;
    public static readonly RULE_array = 47;
    public static readonly RULE_functionCall = 48;

    public static readonly literalNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'='", "'+'", 
        "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
        "','", "'.'", "':'"
    ];

    public static readonly symbolicNames = [
        null, "LET", "FROM", "WHERE", "SELECT", "INCLUDE", "ORDER", "BY", 
        "ASC", "DESC", "LIMIT", "OFFSET", "INSERT", "INTO", "UPDATE", "SET", 
        "DELETE", "AGGREGATE", "MATCH", "GROUP", "HAVING", "SORT", "LOOKUP", 
        "ON", "POLICY", "MAX_LIMIT", "ALLOW", "DENY", "FIELDS", "FILTER", 
        "AND", "OR", "NOT", "IN", "BETWEEN", "CONTAINS", "STARTS_WITH", 
        "ENDS_WITH", "NOW", "COUNT", "SUM", "AVG", "MIN_FUNC", "MAX_FUNC", 
        "BOOLEAN", "EQ", "NEQ", "GTE", "LTE", "GT", "LT", "ASSIGN", "PLUS", 
        "MINUS_OP", "STAR", "SLASH", "MODULO", "LBRACE", "RBRACE", "LBRACKET", 
        "RBRACKET", "LPAREN", "RPAREN", "COMMA", "DOT", "COLON", "NUMBER", 
        "STRING", "FIELD_REF", "IDENTIFIER", "WS", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "statement", "letStatement", "fromStatement", "whereClause", 
        "selectClause", "fieldList", "includeClause", "includeBody", "orderByClause", 
        "orderField", "limitClause", "offsetClause", "insertStatement", 
        "insertFieldList", "insertField", "updateStatement", "setClause", 
        "setFieldList", "setField", "deleteStatement", "aggregateStatement", 
        "aggregateBody", "matchClause", "lookupClause", "dotPath", "groupByClause", 
        "groupFieldList", "groupField", "aggregateFunction", "havingClause", 
        "sortClause", "sortField", "policyStatement", "policyBody", "policyRule", 
        "expression", "orExpression", "andExpression", "notExpression", 
        "primaryExpression", "comparison", "comparisonOp", "valueExpr", 
        "exprFunc", "literal", "stringLiteral", "array", "functionCall",
    ];

    public get grammarFileName(): string { return "QMongo.g4"; }
    public get literalNames(): (string | null)[] { return QMongoParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return QMongoParser.symbolicNames; }
    public get ruleNames(): string[] { return QMongoParser.ruleNames; }
    public get serializedATN(): number[] { return QMongoParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, QMongoParser._ATN, QMongoParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, QMongoParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16994310) !== 0)) {
                {
                {
                this.state = 98;
                this.statement();
                }
                }
                this.state = 103;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 104;
            this.match(QMongoParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, QMongoParser.RULE_statement);
        try {
            this.state = 113;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case QMongoParser.LET:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 106;
                this.letStatement();
                }
                break;
            case QMongoParser.FROM:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 107;
                this.fromStatement();
                }
                break;
            case QMongoParser.INSERT:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 108;
                this.insertStatement();
                }
                break;
            case QMongoParser.UPDATE:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 109;
                this.updateStatement();
                }
                break;
            case QMongoParser.DELETE:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 110;
                this.deleteStatement();
                }
                break;
            case QMongoParser.AGGREGATE:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 111;
                this.aggregateStatement();
                }
                break;
            case QMongoParser.POLICY:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 112;
                this.policyStatement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStatement(): LetStatementContext {
        let localContext = new LetStatementContext(this.context, this.state);
        this.enterRule(localContext, 4, QMongoParser.RULE_letStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 115;
            this.match(QMongoParser.LET);
            this.state = 116;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 117;
            this.match(QMongoParser.ASSIGN);
            this.state = 118;
            this.literal();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fromStatement(): FromStatementContext {
        let localContext = new FromStatementContext(this.context, this.state);
        this.enterRule(localContext, 6, QMongoParser.RULE_fromStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 120;
            this.match(QMongoParser.FROM);
            this.state = 121;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 123;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 3) {
                {
                this.state = 122;
                this.whereClause();
                }
            }

            this.state = 126;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 4) {
                {
                this.state = 125;
                this.selectClause();
                }
            }

            this.state = 131;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 128;
                this.includeClause();
                }
                }
                this.state = 133;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 135;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 6) {
                {
                this.state = 134;
                this.orderByClause();
                }
            }

            this.state = 138;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 137;
                this.limitClause();
                }
            }

            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 140;
                this.offsetClause();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whereClause(): WhereClauseContext {
        let localContext = new WhereClauseContext(this.context, this.state);
        this.enterRule(localContext, 8, QMongoParser.RULE_whereClause);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 143;
            this.match(QMongoParser.WHERE);
            this.state = 144;
            this.expression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public selectClause(): SelectClauseContext {
        let localContext = new SelectClauseContext(this.context, this.state);
        this.enterRule(localContext, 10, QMongoParser.RULE_selectClause);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            this.match(QMongoParser.SELECT);
            this.state = 147;
            this.fieldList();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fieldList(): FieldListContext {
        let localContext = new FieldListContext(this.context, this.state);
        this.enterRule(localContext, 12, QMongoParser.RULE_fieldList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 149;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 154;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 63) {
                {
                {
                this.state = 150;
                this.match(QMongoParser.COMMA);
                this.state = 151;
                this.match(QMongoParser.IDENTIFIER);
                }
                }
                this.state = 156;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public includeClause(): IncludeClauseContext {
        let localContext = new IncludeClauseContext(this.context, this.state);
        this.enterRule(localContext, 14, QMongoParser.RULE_includeClause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 157;
            this.match(QMongoParser.INCLUDE);
            this.state = 158;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 163;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 57) {
                {
                this.state = 159;
                this.match(QMongoParser.LBRACE);
                this.state = 160;
                this.includeBody();
                this.state = 161;
                this.match(QMongoParser.RBRACE);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public includeBody(): IncludeBodyContext {
        let localContext = new IncludeBodyContext(this.context, this.state);
        this.enterRule(localContext, 16, QMongoParser.RULE_includeBody);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 166;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 3) {
                {
                this.state = 165;
                this.whereClause();
                }
            }

            this.state = 169;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 4) {
                {
                this.state = 168;
                this.selectClause();
                }
            }

            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 6) {
                {
                this.state = 171;
                this.orderByClause();
                }
            }

            this.state = 175;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 174;
                this.limitClause();
                }
            }

            this.state = 180;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 177;
                this.includeClause();
                }
                }
                this.state = 182;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public orderByClause(): OrderByClauseContext {
        let localContext = new OrderByClauseContext(this.context, this.state);
        this.enterRule(localContext, 18, QMongoParser.RULE_orderByClause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 183;
            this.match(QMongoParser.ORDER);
            this.state = 184;
            this.match(QMongoParser.BY);
            this.state = 185;
            this.orderField();
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 63) {
                {
                {
                this.state = 186;
                this.match(QMongoParser.COMMA);
                this.state = 187;
                this.orderField();
                }
                }
                this.state = 192;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public orderField(): OrderFieldContext {
        let localContext = new OrderFieldContext(this.context, this.state);
        this.enterRule(localContext, 20, QMongoParser.RULE_orderField);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 193;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 195;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 8 || _la === 9) {
                {
                this.state = 194;
                _la = this.tokenStream.LA(1);
                if(!(_la === 8 || _la === 9)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public limitClause(): LimitClauseContext {
        let localContext = new LimitClauseContext(this.context, this.state);
        this.enterRule(localContext, 22, QMongoParser.RULE_limitClause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 197;
            this.match(QMongoParser.LIMIT);
            this.state = 198;
            _la = this.tokenStream.LA(1);
            if(!(_la === 66 || _la === 69)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public offsetClause(): OffsetClauseContext {
        let localContext = new OffsetClauseContext(this.context, this.state);
        this.enterRule(localContext, 24, QMongoParser.RULE_offsetClause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 200;
            this.match(QMongoParser.OFFSET);
            this.state = 201;
            _la = this.tokenStream.LA(1);
            if(!(_la === 66 || _la === 69)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public insertStatement(): InsertStatementContext {
        let localContext = new InsertStatementContext(this.context, this.state);
        this.enterRule(localContext, 26, QMongoParser.RULE_insertStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 203;
            this.match(QMongoParser.INSERT);
            this.state = 204;
            this.match(QMongoParser.INTO);
            this.state = 205;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 206;
            this.match(QMongoParser.LBRACE);
            this.state = 207;
            this.insertFieldList();
            this.state = 208;
            this.match(QMongoParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public insertFieldList(): InsertFieldListContext {
        let localContext = new InsertFieldListContext(this.context, this.state);
        this.enterRule(localContext, 28, QMongoParser.RULE_insertFieldList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 210;
            this.insertField();
            this.state = 215;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 63) {
                {
                {
                this.state = 211;
                this.match(QMongoParser.COMMA);
                this.state = 212;
                this.insertField();
                }
                }
                this.state = 217;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public insertField(): InsertFieldContext {
        let localContext = new InsertFieldContext(this.context, this.state);
        this.enterRule(localContext, 30, QMongoParser.RULE_insertField);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 218;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 219;
            this.match(QMongoParser.COLON);
            this.state = 220;
            this.literal();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public updateStatement(): UpdateStatementContext {
        let localContext = new UpdateStatementContext(this.context, this.state);
        this.enterRule(localContext, 32, QMongoParser.RULE_updateStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 222;
            this.match(QMongoParser.UPDATE);
            this.state = 223;
            this.match(QMongoParser.IDENTIFIER);
            this.state = 224;
            this.whereClause();
            this.state = 225;
            this.setClause();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
